--- a/front-end-vue/index.html
+++ b/front-end-vue/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <script type="module" src="/src/main.ts"></script>
-    <link rel="icon" href="./public/favicon-32x32.png" />
+    <link rel="icon" href="./favicon-32x32.png" />
     <title>Information Model</title>
   </head>
   <body>
